syntax = "proto3";

package chord;

option go_package = "github.com/anthoturc/chord/proto";

//  Chord service
//      RPC calls defined in the original chord paper: 
//      https://pdos.csail.mit.edu/papers/ton:chord/paper-ton.pdf    
service Chord {
    rpc FindSuccessor(FindSuccessorRequest) returns (FindSuccessorResponse) {}
    rpc GetPredecessor(GetPredecessorRequest) returns (GetPredecessorResponse) {}
    rpc Notify(NotifyRequest) returns (NotifyResponse) {}
		rpc Ping(PingRequest) returns (PingResponse) {}
}

message FindSuccessorRequest {
    string key = 1;
}

message FindSuccessorResponse {
    string address = 1;
}

message GetPredecessorRequest {
}

message GetPredecessorResponse {
    string address = 1;
}

message NotifyRequest {
	string address = 1;
}

message NotifyResponse {
}

message PingRequest {
}

message PingResponse {
    string message = 1;
}
